sna: Correct inverted logic for checking xrgb drawables

Reported-by: Christoph Reiter <reiter.christoph@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=51472
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>